--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,9 +51,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.facebook4j-core-2.4.10.jar}:\
     ${file.reference.primefaces-6.2.jar}:\
-    ${file.reference.archive.jar}:\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.archive.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
